feat: added auth service
